--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/gemini-icon.png" />
+    <link rel="icon" type="image/png" href="/gemini-icon.png" alt="gemini-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Experience the power of AI with our Gemini Clone! Engage in natural conversations, generate code, and explore limitless possibilities. Try it now!"> 
     <title>Gemini Clone</title>
   </head>
   <body>
